# Amy-ai

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  Technology stack.md  app.py  config-template.json  config.json.backup.1779098172  config.py  config.toml  gomoku.html  gomoku.py  main.py  neo4j_business_logic.txt  neo4j_业务逻辑写入清单.md  neo4j_业务逻辑导入脚本.cypher  pyproject.toml  run.dev.bat  青藤小镇意见.md
.claude/: settings.local.json
agent/protocol/: agent.py  agent_stream.py  context.py  result.py  task.py
agent/tools/: base_tool.py  browser_tool.py  tool_manager.py
bridge/: agent_bridge.py  agent_event_handler.py  bridge.py  context.py  reply.py
channel/: channel.py  channel_factory.py  chat_channel.py  chat_message.py  file_cache.py
channel/dingtalk/: dingtalk_channel.py  dingtalk_message.py
channel/feishu/: feishu_channel.py  feishu_message.py
channel/qq/: __init__.py  qq_channel.py  qq_message.py
channel/terminal/: terminal_channel.py
channel/web/: web_channel.py
channel/wechatcom/: wechatcomapp_channel.py  wechatcomapp_client.py  (+1 more)
common/: const.py  dequeue.py  expired_dict.py  log.py  memory.py  package_manager.py  singleton.py  sorted_dict.py  time_check.py  tmp_dir.py  token_bucket.py  utils.py  ws_client_compat.py
docker/: Dockerfile.dev  docker-compose.dev.yml  entrypoint-dev.sh  star-note.md
docs/: agent.md
models/: session_manager.py
old/: Dockerfile-  docker-compose-.yml  docker-compose.yml  entrypoint.sh
plugins/: __init__.py  event.py  plugin.py  plugin_manager.py
translate/: factory.py
voice/: audio_convert.py
(+25 files in other folders)
